samples/_failures_safe/1761124744_5fe559_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5095e553.c: In function ‘main’:
./samples/SAFE/__tmp_5095e553.c:146:33: error: expected ‘]’ at end of input
  146 |     if (len > 0 && input[len - 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_5095e553.c:146:5: error: expected declaration or statement at end of input
  146 |     if (len > 0 && input[len - 1
      |     ^~
